--- a/T/TrueSkillThroughTime/Versions.toml
+++ b/T/TrueSkillThroughTime/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "60fa4e11f6915c813f19ce62042e32a77b813872"
 
 ["0.1.2"]
 git-tree-sha1 = "d89334654ecf92de9c90590a38b5504fe1b6649a"
+
+["0.1.3"]
+git-tree-sha1 = "dd4f2c8e64049708683b1cbf9d26fee56bc7b3b0"
